--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,15 @@
-<div class="container">
-  <h1>Rolf Sommer</h1>
+<div class="container-home">
+  <div class="container">
+    <div class="menu">
+      
+    </div>
 
-  <p>Change your life, learn how to code</p>
+    <h1 class="title">Rolf Sommer</h1>
+    <h3 class="title">Schauspieler | Regisseur | Texter</h3>
+    
+    <footer class="fixed-bottom">
+      <a href="mailto:info@rolfsommer.net">info@rolfsommer.net</a>
+    </footer>
+
+  </div>
 </div>
