--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,15 @@
 <div class="container-home">
   <div class="container">
     <div class="menu">
-      
+
+    </div>
+    <div class="title">
+      <h1>Rolf Sommer</h1>
+      <h3> <%= link_to "Schauspieler", schauspieler_path, class: "link" %>
+      | Regisseur
+      | Texter</h3>
     </div>
 
-    <h1 class="title">Rolf Sommer</h1>
-    <h3 class="title">Schauspieler | Regisseur | Texter</h3>
-    
     <footer class="fixed-bottom">
       <a href="mailto:info@rolfsommer.net">info@rolfsommer.net</a>
     </footer>
