--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,4 +1,3 @@
-// Specific CSS for your home-page
 .container-home {
   background-image: asset-url("red_light_landing_page.png");
   background-repeat: no-repeat;
@@ -9,26 +8,26 @@
   width: 100vw;
 }
 
-h1 {
+.title {
   color: #CCCCCC;
-  font-size: 4rem;
-  text-align: center;
-  letter-spacing: -5px;
-  font-weight: 400;
-  padding-top: 30px;
-  margin: 0;
-  margin-bottom: -1rem;
-
-}
-
-h3 {
-  color: #CCCCCC;
-  font-size: 1.7rem;
   text-align: center;
   font-weight: 400;
-  letter-spacing: -1px;
-  font-style: italic;
   margin: 0;
+  h1 {
+    font-size: 4rem;
+    letter-spacing: -5px;
+    padding-top: 30px;
+    margin-bottom: -1rem;
+  }
+  h3 {
+    font-size: 1.7rem;
+    letter-spacing: -1px;
+    font-style: italic;
+  }
+  .link {
+    text-decoration: none;
+    color: #CCCCCC;
+  }
 }
 
 footer {
