--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@
 }
 
 .title {
-  color: #CCCCCC;
+  color: white;
   text-align: center;
   font-weight: 400;
   margin: 0;
@@ -20,7 +20,8 @@
     margin-bottom: -1rem;
   }
   h3 {
-    font-size: 1.7rem;
+    color: #CCCCCC;
+    font-size: 1.6rem;
     letter-spacing: -1px;
     font-style: italic;
   }
