--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
+.navbar-rolfsommer {
+  // justify-content: center;
+  text-align: center;
+
 }
 
 .navbar-lewagon .navbar-collapse {
